[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.5.4",
    "notebook>=7.4.4",
    "python-dotenv>=1.1.1",
]
